tests/rosetta/out/Rust/2048.error
rustc: exit status 1
warning: denote infinite loops with `loop { ... }`
   --> /tmp/2048.rs:259:5
    |
259 |     while true {
    |     ^^^^^^^^^^ help: use `loop`
    |
    = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
  --> /tmp/2048.rs:38:135
   |
38 | ...::new(); m.insert(String::from("board"), b); m.insert(String::from("full"), true); m };
   |             -                               -     ------                       ^^^^ expected `&mut Vec<Vec<i32>>`, found `bool`
   |             |                               |     |
   |             |                               |     arguments to this method are incorrect
   |             |                               this argument has type `&mut Vec<Vec<i32>>`...
   |             ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
   |
   = note: expected mutable reference `&mut Vec<Vec<i32>>`
                           found type `bool`
help: the return type of this call is `bool` due to the type of the argument passed
  --> /tmp/2048.rs:38:104
   |
38 | ...ng::from("board"), b); m.insert(String::from("full"), true); m };
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----^
   |                                                          |
   |                                                          this argument influences the return type of `insert`
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
  --> /tmp/2048.rs:38:142
   |
24 | ...ec<Vec<i32>>| -> std::collections::HashMap<String, i32> {
   |                     -------------------------------------- expected `HashMap<String, i32>` because of return type
...
38 | ...d::collections::HashMap::new(); m.insert(String::from("board"), b); m.insert(String::from("full"), true); m };
   |                                    -                               -                                         ^ expected `HashMap<String, i32>`, found `HashMap<String, &mut Vec<Vec<i32>>>`
   |                                    |                               |
   |                                    |                               this argument has type `&mut Vec<Vec<i32>>`...
   |                                    ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
   |
   = note: expected struct `HashMap<_, i32>`
              found struct `HashMap<_, &mut Vec<Vec<i32>>>`

error[E0308]: mismatched types
  --> /tmp/2048.rs:40:32
   |
40 |         let mut idx = _now() % (empty.len() as i32);
   |                                ^^^^^^^^^^^^^^^^^^^^ expected `i64`, found `i32`

error[E0277]: cannot calculate the remainder of `i64` divided by `i32`
  --> /tmp/2048.rs:40:30
   |
40 |         let mut idx = _now() % (empty.len() as i32);
   |                              ^ no implementation for `i64 % i32`
   |
   = help: the trait `Rem<i32>` is not implemented for `i64`
   = help: the following other types implement trait `Rem<Rhs>`:
             `&i64` implements `Rem<i64>`
             `&i64` implements `Rem`
             `i64` implements `Rem<&i64>`
             `i64` implements `Rem`

error[E0308]: mismatched types
  --> /tmp/2048.rs:47:131
   |
47 | ...:HashMap::new(); m.insert(String::from("board"), b); m.insert(String::from("full"), (empty.len() as i32) == 1); m };
   |                     -                               -     ------                       ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&mut Vec<Vec<i32>>`, found `bool`
   |                     |                               |     |
   |                     |                               |     arguments to this method are incorrect
   |                     |                               this argument has type `&mut Vec<Vec<i32>>`...
   |                     ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
   |
   = note: expected mutable reference `&mut Vec<Vec<i32>>`
                           found type `bool`
help: the return type of this call is `bool` due to the type of the argument passed
  --> /tmp/2048.rs:47:100
   |
47 | ...oard"), b); m.insert(String::from("full"), (empty.len() as i32) == 1); m };
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-------------------------^
   |                                               |
   |                                               this argument influences the return type of `insert`
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
  --> /tmp/2048.rs:47:159
   |
24 | ...<i32>>| -> std::collections::HashMap<String, i32> {
   |               -------------------------------------- expected `HashMap<String, i32>` because of return type
...
47 | ...ions::HashMap::new(); m.insert(String::from("board"), b); m.insert(String::from("full"), (empty.len() as i32) == 1); m };
   |                          -                               - this argument has type `&mut Vec<Vec<i32>>`...               ^ expected `HashMap<String, i32>`, found `HashMap<String, &mut Vec<Vec<i32>>>`
   |                          |
   |                          ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
   |
   = note: expected struct `HashMap<_, i32>`
              found struct `HashMap<_, &mut Vec<Vec<i32>>>`

error[E0308]: mismatched types
   --> /tmp/2048.rs:117:131
    |
117 | ...ashMap::new(); m.insert(String::from("row"), res); m.insert(String::from("gain"), gain); m };
    |                   -                             ---     ------                       ^^^^ expected `Vec<i32>`, found `i32`
    |                   |                             |       |
    |                   |                             |       arguments to this method are incorrect
    |                   |                             this argument has type `Vec<i32>`...
    |                   ... which causes `m` to have type `HashMap<String, Vec<i32>>`
    |
    = note: expected struct `Vec<i32>`
                 found type `i32`
help: the return type of this call is `i32` due to the type of the argument passed
   --> /tmp/2048.rs:117:100
    |
117 | ...ng::from("row"), res); m.insert(String::from("gain"), gain); m };
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----^
    |                                                          |
    |                                                          this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
   --> /tmp/2048.rs:117:138
    |
91  | ...: Vec<i32>| -> std::collections::HashMap<String, i32> {
    |                   -------------------------------------- expected `HashMap<String, i32>` because of return type
...
117 | ...std::collections::HashMap::new(); m.insert(String::from("row"), res); m.insert(String::from("gain"), gain); m };
    |                                      -                             --- this argument has type `Vec<i32>`...    ^ expected `HashMap<String, i32>`, found `HashMap<String, Vec<i32>>`
    |                                      |
    |                                      ... which causes `m` to have type `HashMap<String, Vec<i32>>`
    |
    = note: expected struct `HashMap<_, i32>`
               found struct `HashMap<_, Vec<i32>>`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&mut i32`
   --> /tmp/2048.rs:125:13
    |
125 |             score += *r.get(&String::from("gain")).unwrap();
    |             -----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |             |
    |             cannot use `+=` on type `&mut i32`
    |
help: `+=` can be used on `i32` if you dereference the left-hand side
    |
125 |             *score += *r.get(&String::from("gain")).unwrap();
    |             +

error[E0608]: cannot index into a value of type `i32`
   --> /tmp/2048.rs:128:56
    |
128 |                 if b[(y) as usize][(x) as usize] != new[(x) as usize] {
    |                                                        ^^^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `i32`
   --> /tmp/2048.rs:131:52
    |
131 |                 b[(y) as usize][(x) as usize] = new[(x) as usize];
    |                                                    ^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> /tmp/2048.rs:136:132
    |
136 | ...ew(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |          -                               -     ------                        ^^^^^ expected `&mut Vec<Vec<i32>>`, found `&mut i32`
    |          |                               |     |
    |          |                               |     arguments to this method are incorrect
    |          |                               this argument has type `&mut Vec<Vec<i32>>`...
    |          ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected mutable reference `&mut Vec<Vec<i32>>`
               found mutable reference `&mut i32`
help: the return type of this call is `&mut i32` due to the type of the argument passed
   --> /tmp/2048.rs:136:100
    |
136 | ...g::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^
    |                                                          |
    |                                                          this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
   --> /tmp/2048.rs:136:172
    |
136 | ...::new(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |             -                               -                                             ------                        ^^^^^ expected `&mut Vec<Vec<i32>>`, found `bool`
    |             |                               |                                             |
    |             |                               |                                             arguments to this method are incorrect
    |             |                               this argument has type `&mut Vec<Vec<i32>>`...
    |             ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected mutable reference `&mut Vec<Vec<i32>>`
                            found type `bool`
help: the return type of this call is `bool` due to the type of the argument passed
   --> /tmp/2048.rs:136:140
    |
136 | ...rom("score"), score); m.insert(String::from("moved"), moved); m };
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^
    |                                                          |
    |                                                          this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
   --> /tmp/2048.rs:136:180
    |
119 | ...mut i32| -> std::collections::HashMap<String, i32> {
    |                -------------------------------------- expected `HashMap<String, i32>` because of return type
...
136 | ...new(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |           -                               - this argument has type `&mut Vec<Vec<i32>>`...                                    ^ expected `HashMap<String, i32>`, found `HashMap<String, &mut Vec<Vec<i32>>>`
    |           |
    |           ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected struct `HashMap<_, i32>`
               found struct `HashMap<_, &mut Vec<Vec<i32>>>`

error[E0308]: mismatched types
   --> /tmp/2048.rs:144:19
    |
142 |             let mut rev = reverseRow(b[(y) as usize]);
    |                           --------------------------- expected due to this value
143 |             let r = slideLeft(rev);
144 |             rev = *r.get(&String::from("row")).unwrap();
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<i32>`, found `i32`
    |
    = note: expected struct `Vec<i32>`
                 found type `i32`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&mut i32`
   --> /tmp/2048.rs:145:13
    |
145 |             score += *r.get(&String::from("gain")).unwrap();
    |             -----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |             |
    |             cannot use `+=` on type `&mut i32`
    |
help: `+=` can be used on `i32` if you dereference the left-hand side
    |
145 |             *score += *r.get(&String::from("gain")).unwrap();
    |             +

error[E0308]: mismatched types
   --> /tmp/2048.rs:157:132
    |
157 | ...ew(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |          -                               -     ------                        ^^^^^ expected `&mut Vec<Vec<i32>>`, found `&mut i32`
    |          |                               |     |
    |          |                               |     arguments to this method are incorrect
    |          |                               this argument has type `&mut Vec<Vec<i32>>`...
    |          ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected mutable reference `&mut Vec<Vec<i32>>`
               found mutable reference `&mut i32`
help: the return type of this call is `&mut i32` due to the type of the argument passed
   --> /tmp/2048.rs:157:100
    |
157 | ...g::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^
    |                                                          |
    |                                                          this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
   --> /tmp/2048.rs:157:172
    |
157 | ...::new(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |             -                               -                                             ------                        ^^^^^ expected `&mut Vec<Vec<i32>>`, found `bool`
    |             |                               |                                             |
    |             |                               |                                             arguments to this method are incorrect
    |             |                               this argument has type `&mut Vec<Vec<i32>>`...
    |             ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected mutable reference `&mut Vec<Vec<i32>>`
                            found type `bool`
help: the return type of this call is `bool` due to the type of the argument passed
   --> /tmp/2048.rs:157:140
    |
157 | ...rom("score"), score); m.insert(String::from("moved"), moved); m };
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^
    |                                                          |
    |                                                          this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
   --> /tmp/2048.rs:157:180
    |
138 | ...&mut i32| -> std::collections::HashMap<String, i32> {
    |                 -------------------------------------- expected `HashMap<String, i32>` because of return type
...
157 | ...new(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |           -                               - this argument has type `&mut Vec<Vec<i32>>`...                                    ^ expected `HashMap<String, i32>`, found `HashMap<String, &mut Vec<Vec<i32>>>`
    |           |
    |           ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected struct `HashMap<_, i32>`
               found struct `HashMap<_, &mut Vec<Vec<i32>>>`

error[E0308]: mismatched types
   --> /tmp/2048.rs:179:34
    |
179 |             let mut col = getCol(b, x);
    |                           ------ ^- help: try using a conversion method: `.to_vec()`
    |                           |      |
    |                           |      expected `Vec<Vec<i32>>`, found `&mut Vec<Vec<i32>>`
    |                           arguments to this function are incorrect
    |
    = note:         expected struct `Vec<_>`
            found mutable reference `&mut Vec<_>`
note: closure parameter defined here
   --> /tmp/2048.rs:159:24
    |
159 |     let getCol = move |b: Vec<Vec<i32>>, x: i32| -> Vec<i32> {
    |                        ^^^^^^^^^^^^^^^^

error[E0368]: binary assignment operation `+=` cannot be applied to type `&mut i32`
   --> /tmp/2048.rs:182:13
    |
182 |             score += *r.get(&String::from("gain")).unwrap();
    |             -----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |             |
    |             cannot use `+=` on type `&mut i32`
    |
help: `+=` can be used on `i32` if you dereference the left-hand side
    |
182 |             *score += *r.get(&String::from("gain")).unwrap();
    |             +

error[E0608]: cannot index into a value of type `i32`
   --> /tmp/2048.rs:185:56
    |
185 |                 if b[(y) as usize][(x) as usize] != new[(y) as usize] {
    |                                                        ^^^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `i32`
   --> /tmp/2048.rs:188:52
    |
188 |                 b[(y) as usize][(x) as usize] = new[(y) as usize];
    |                                                    ^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> /tmp/2048.rs:193:132
    |
193 | ...ew(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |          -                               -     ------                        ^^^^^ expected `&mut Vec<Vec<i32>>`, found `&mut i32`
    |          |                               |     |
    |          |                               |     arguments to this method are incorrect
    |          |                               this argument has type `&mut Vec<Vec<i32>>`...
    |          ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected mutable reference `&mut Vec<Vec<i32>>`
               found mutable reference `&mut i32`
help: the return type of this call is `&mut i32` due to the type of the argument passed
   --> /tmp/2048.rs:193:100
    |
193 | ...g::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^
    |                                                          |
    |                                                          this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
   --> /tmp/2048.rs:193:172
    |
193 | ...::new(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |             -                               -                                             ------                        ^^^^^ expected `&mut Vec<Vec<i32>>`, found `bool`
    |             |                               |                                             |
    |             |                               |                                             arguments to this method are incorrect
    |             |                               this argument has type `&mut Vec<Vec<i32>>`...
    |             ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected mutable reference `&mut Vec<Vec<i32>>`
                            found type `bool`
help: the return type of this call is `bool` due to the type of the argument passed
   --> /tmp/2048.rs:193:140
    |
193 | ...rom("score"), score); m.insert(String::from("moved"), moved); m };
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^
    |                                                          |
    |                                                          this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
   --> /tmp/2048.rs:193:180
    |
175 | ...t i32| -> std::collections::HashMap<String, i32> {
    |              -------------------------------------- expected `HashMap<String, i32>` because of return type
...
193 | ...new(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |           -                               - this argument has type `&mut Vec<Vec<i32>>`...                                    ^ expected `HashMap<String, i32>`, found `HashMap<String, &mut Vec<Vec<i32>>>`
    |           |
    |           ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected struct `HashMap<_, i32>`
               found struct `HashMap<_, &mut Vec<Vec<i32>>>`

error[E0308]: mismatched types
   --> /tmp/2048.rs:199:45
    |
199 |             let mut col = reverseRow(getCol(b, x));
    |                                      ------ ^- help: try using a conversion method: `.to_vec()`
    |                                      |      |
    |                                      |      expected `Vec<Vec<i32>>`, found `&mut Vec<Vec<i32>>`
    |                                      arguments to this function are incorrect
    |
    = note:         expected struct `Vec<_>`
            found mutable reference `&mut Vec<_>`
note: closure parameter defined here
   --> /tmp/2048.rs:159:24
    |
159 |     let getCol = move |b: Vec<Vec<i32>>, x: i32| -> Vec<i32> {
    |                        ^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> /tmp/2048.rs:201:19
    |
199 |             let mut col = reverseRow(getCol(b, x));
    |                           ------------------------ expected due to this value
200 |             let r = slideLeft(col);
201 |             col = *r.get(&String::from("row")).unwrap();
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<i32>`, found `i32`
    |
    = note: expected struct `Vec<i32>`
                 found type `i32`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&mut i32`
   --> /tmp/2048.rs:202:13
    |
202 |             score += *r.get(&String::from("gain")).unwrap();
    |             -----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |             |
    |             cannot use `+=` on type `&mut i32`
    |
help: `+=` can be used on `i32` if you dereference the left-hand side
    |
202 |             *score += *r.get(&String::from("gain")).unwrap();
    |             +

error[E0308]: mismatched types
   --> /tmp/2048.rs:214:132
    |
214 | ...ew(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |          -                               -     ------                        ^^^^^ expected `&mut Vec<Vec<i32>>`, found `&mut i32`
    |          |                               |     |
    |          |                               |     arguments to this method are incorrect
    |          |                               this argument has type `&mut Vec<Vec<i32>>`...
    |          ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected mutable reference `&mut Vec<Vec<i32>>`
               found mutable reference `&mut i32`
help: the return type of this call is `&mut i32` due to the type of the argument passed
   --> /tmp/2048.rs:214:100
    |
214 | ...g::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^
    |                                                          |
    |                                                          this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
   --> /tmp/2048.rs:214:172
    |
214 | ...::new(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |             -                               -                                             ------                        ^^^^^ expected `&mut Vec<Vec<i32>>`, found `bool`
    |             |                               |                                             |
    |             |                               |                                             arguments to this method are incorrect
    |             |                               this argument has type `&mut Vec<Vec<i32>>`...
    |             ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected mutable reference `&mut Vec<Vec<i32>>`
                            found type `bool`
help: the return type of this call is `bool` due to the type of the argument passed
   --> /tmp/2048.rs:214:140
    |
214 | ...rom("score"), score); m.insert(String::from("moved"), moved); m };
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^
    |                                                          |
    |                                                          this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
   --> /tmp/2048.rs:214:180
    |
195 | ...mut i32| -> std::collections::HashMap<String, i32> {
    |                -------------------------------------- expected `HashMap<String, i32>` because of return type
...
214 | ...new(); m.insert(String::from("board"), b); m.insert(String::from("score"), score); m.insert(String::from("moved"), moved); m };
    |           -                               - this argument has type `&mut Vec<Vec<i32>>`...                                    ^ expected `HashMap<String, i32>`, found `HashMap<String, &mut Vec<Vec<i32>>>`
    |           |
    |           ... which causes `m` to have type `HashMap<String, &mut Vec<Vec<i32>>>`
    |
    = note: expected struct `HashMap<_, i32>`
               found struct `HashMap<_, &mut Vec<Vec<i32>>>`

error[E0308]: mismatched types
   --> /tmp/2048.rs:252:13
    |
250 |     let mut board = newBoard();
    |                     ---------- expected due to this value
251 |     let mut r = spawnTile(&mut board);
252 |     board = *r.get(&String::from("board")).unwrap();
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Vec<i32>>`, found `i32`
    |
    = note: expected struct `Vec<Vec<i32>>`
                 found type `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:255:13
    |
250 |     let mut board = newBoard();
    |                     ---------- expected due to this value
...
255 |     board = *r.get(&String::from("board")).unwrap();
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Vec<i32>>`, found `i32`
    |
    = note: expected struct `Vec<Vec<i32>>`
                 found type `i32`

error[E0425]: cannot find function `input` in this scope
   --> /tmp/2048.rs:261:19
    |
261 |         let cmd = input();
    |                   ^^^^^ not found in this scope

error[E0308]: mismatched types
   --> /tmp/2048.rs:265:21
    |
250 |     let mut board = newBoard();
    |                     ---------- expected due to this value
...
265 |             board = *m.get(&String::from("board")).unwrap();
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Vec<i32>>`, found `i32`
    |
    = note: expected struct `Vec<Vec<i32>>`
                 found type `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:267:21
    |
262 |         let mut moved = false;
    |                         ----- expected due to this value
...
267 |             moved = *m.get(&String::from("moved")).unwrap();
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:271:21
    |
250 |     let mut board = newBoard();
    |                     ---------- expected due to this value
...
271 |             board = *m.get(&String::from("board")).unwrap();
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Vec<i32>>`, found `i32`
    |
    = note: expected struct `Vec<Vec<i32>>`
                 found type `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:273:21
    |
262 |         let mut moved = false;
    |                         ----- expected due to this value
...
273 |             moved = *m.get(&String::from("moved")).unwrap();
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:277:21
    |
250 |     let mut board = newBoard();
    |                     ---------- expected due to this value
...
277 |             board = *m.get(&String::from("board")).unwrap();
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Vec<i32>>`, found `i32`
    |
    = note: expected struct `Vec<Vec<i32>>`
                 found type `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:279:21
    |
262 |         let mut moved = false;
    |                         ----- expected due to this value
...
279 |             moved = *m.get(&String::from("moved")).unwrap();
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:283:21
    |
250 |     let mut board = newBoard();
    |                     ---------- expected due to this value
...
283 |             board = *m.get(&String::from("board")).unwrap();
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Vec<i32>>`, found `i32`
    |
    = note: expected struct `Vec<Vec<i32>>`
                 found type `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:285:21
    |
262 |         let mut moved = false;
    |                         ----- expected due to this value
...
285 |             moved = *m.get(&String::from("moved")).unwrap();
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:292:21
    |
250 |     let mut board = newBoard();
    |                     ---------- expected due to this value
...
292 |             board = *r2.get(&String::from("board")).unwrap();
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Vec<i32>>`, found `i32`
    |
    = note: expected struct `Vec<Vec<i32>>`
                 found type `i32`

error[E0308]: mismatched types
   --> /tmp/2048.rs:294:16
    |
294 |             if full && (!hasMoves(board)) != Default::default() {
    |                ^^^^ expected `bool`, found `i32`

error: aborting due to 45 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308, E0368, E0425, E0608.
For more information about an error, try `rustc --explain E0277`.
